--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
                             <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_0" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>
-                                    ¿Qué es CCEI?
+                                    Ingeniería Civil
                                 </h4>
                             </a>
                         </div>
                         <div id="collapse1_0" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">DTIC es planificar y gestionar las actividades vinculadas con las Tecnologías de la Información y la Comunicación (TIC’s) de la Facultad, los procedimientos tendientes a garantizar el uso seguro y responsable de la información que se administra en los Sistemas de Información de la Facultad Regional. Brindando soporte técnico y atención a los usuarios de los sistemas informáticos.</p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                   Key differences from traditional builders:<br>* Minimalistic, extremely <strong>easy-to-use</strong> interface<br>* <strong>Mobile</strong>-friendliness, latest website blocks and techniques "out-the-box"<br>* <strong>Free</strong> for commercial and non-profit use</p>
                             </div>
                         </div>
                     </div>
@@ -54,7 +55,7 @@
                         <div class="card-header" role="tab" id="headingTwo">
                             <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_0" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-5">
-                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>¿Quién es Ricardo Monla?
+                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Ingeniería Electromecánica
                                </h4>
                             </a>
                             
@@ -62,7 +63,7 @@
                         <div id="collapse2_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                   Es el jefecito, coordinador, director, tecnico, futuro licenciado, que "dice" que coordina con los jerarcas de la facultad.<br>Le gusta coleccionar jugos en polvo y hacerlos con poca agua para que se le arrugue la garganta de tan fuerte que es el sabor del juguito.</p>
+                                   Key differences from traditional builders:<br>* Minimalistic, extremely <strong>easy-to-use</strong> interface<br>* <strong>Mobile</strong>-friendliness, latest website blocks and techniques "out-the-box"<br>* <strong>Free</strong> for commercial and non-profit use</p>
                             </div>
                         </div>
                     </div>
@@ -70,7 +71,7 @@
                         <div class="card-header" role="tab" id="headingThree">
                             <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_0" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-5">
-                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Why Mobirise?
+                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Ingeniería Electrónica
                                 </h4>
                             </a>
                         </div>
@@ -85,7 +86,7 @@
                         <div class="card-header" role="tab" id="headingFour">
                             <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_0" aria-expanded="false" aria-controls="collapse4">
                                 <h4 class="mbr-fonts-style display-5">
-                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> This is a accordion Title 4
+                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Ingeniería Civil
                                 </h4>
                             </a> 
                         </div>
@@ -100,7 +101,7 @@
                         <div class="card-header" role="tab" id="headingFive">
                             <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_0" aria-expanded="false" aria-controls="collapse5">
                                 <h4 class="mbr-fonts-style display-5">
-                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> This is a accordion Title 5
+                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Ingeniería Civil
                                 </h4>
                             </a>
                         </div>
@@ -115,7 +116,7 @@
                         <div class="card-header" role="tab" id="headingSix">
                             <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_0" aria-expanded="false" aria-controls="collapse6">
                                 <h4 class="mbr-fonts-style display-5">
-                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> This is a accordion Title 6
+                                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Ingeniería Civil
                                 </h4>
                             </a>
                         </div>
