--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                 1er Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 2do Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 3er Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 4to Año
                                  </p>
                             </div>
@@ -69,8 +75,14 @@
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                 1er Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 2do Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 3er Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 4to Año
                                  </p>
                             </div>
@@ -89,8 +101,14 @@
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                 1er Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 2do Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 3er Año
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
                                 4to Año
                                  </p>
                             </div>
