--- a/index.html
+++ b/index.html
@@ -46,23 +46,17 @@
                         </div>
                         <div id="collapse1_0" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">
-                                1er Año
+                                <p class="mbr-fonts-style panel-text display-7">1er Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                2do Año
+                                <p class="mbr-fonts-style panel-text display-7">2do Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                3er Año
+                                <p class="mbr-fonts-style panel-text display-7">3er Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                4to Año
+                                <p class="mbr-fonts-style panel-text display-7">4to Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                5to Año
+                                <p class="mbr-fonts-style panel-text display-7">5to Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                6to Año
+                                <p class="mbr-fonts-style panel-text display-7">6to Año
                                  </p>
                             </div>
                         </div>
@@ -79,23 +73,17 @@
                         </div>
                         <div id="collapse2_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">
-                                1er Año
+                                <p class="mbr-fonts-style panel-text display-7">1er Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                2do Año
+                                <p class="mbr-fonts-style panel-text display-7">2do Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                3er Año
+                                <p class="mbr-fonts-style panel-text display-7">3er Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                4to Año
+                                <p class="mbr-fonts-style panel-text display-7">4to Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                5to Año
+                                <p class="mbr-fonts-style panel-text display-7">5to Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                6to Año
+                                <p class="mbr-fonts-style panel-text display-7">6to Año
                                  </p>
                             </div>
                         </div>
@@ -111,23 +99,17 @@
                         </div>
                         <div id="collapse3_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">
-                                1er Año
+                                <p class="mbr-fonts-style panel-text display-7">1er Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                2do Año
+                                <p class="mbr-fonts-style panel-text display-7">2do Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                3er Año
+                                <p class="mbr-fonts-style panel-text display-7">3er Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                4to Año
+                                <p class="mbr-fonts-style panel-text display-7">4to Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                5to Año
+                                <p class="mbr-fonts-style panel-text display-7">5to Año
                                  </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                6to Año
+                                <p class="mbr-fonts-style panel-text display-7">6to Año
                                  </p>
                             </div>
                         </div>
@@ -141,7 +123,7 @@
                                 </h4>
                             </a>
                         </div>
-                        <div id="collapse3_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
+                        <div id="collapse4_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="https://zoom.us/j/8960669558">Dirección de TIC</a>
