--- a/index.html
+++ b/index.html
@@ -47,16 +47,26 @@
                         <div id="collapse1_0" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">1er Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">2do Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">3er Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">4to Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">5to Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">6to Año
+                                  <ul>
+                                    <li>
+                                      <a href="#">1er Año</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">2do Año</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">3er Año</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">4to Año</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">5to Año</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">6to Año</a>
+                                    </li>
+                                  </ul>
                                  </p>
                             </div>
                         </div>
