--- a/index.html
+++ b/index.html
@@ -46,27 +46,23 @@
                         </div>
                         <div id="collapse1_0" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">1er Año
-                                  <ul>
-                                    <li>
-                                      <a href="#">1er Año</a>
-                                    </li>
-                                    <li>
-                                      <a href="#">2do Año</a>
-                                    </li>
-                                    <li>
-                                      <a href="#">3er Año</a>
-                                    </li>
-                                    <li>
-                                      <a href="#">4to Año</a>
-                                    </li>
-                                    <li>
-                                      <a href="#">5to Año</a>
-                                    </li>
-                                    <li>
-                                      <a href="#">6to Año</a>
-                                    </li>
-                                  </ul>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">1er Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">2do Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">3er Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">4to Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">5to Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">6to Año</a>
                                  </p>
                             </div>
                         </div>
@@ -83,17 +79,23 @@
                         </div>
                         <div id="collapse2_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">1er Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">2do Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">3er Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">4to Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">5to Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">6to Año
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">1er Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">2do Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">3er Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">4to Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">5to Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">6to Año</a>
                                  </p>
                             </div>
                         </div>
@@ -109,17 +111,23 @@
                         </div>
                         <div id="collapse3_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">1er Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">2do Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">3er Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">4to Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">5to Año
-                                 </p>
-                                <p class="mbr-fonts-style panel-text display-7">6to Año
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">1er Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">2do Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">3er Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">4to Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">5to Año</a>
+                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="#">6to Año</a>
                                  </p>
                             </div>
                         </div>
