--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                         <div id="collapse1_0" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">1er Año</a>
+                                  <a href="https://zoom.us/j/894887517">1erAño - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">2do Año</a>
+                                  <a href="#">2do Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">3er Año</a>
+                                  <a href="#">3er Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">4to Año</a>
+                                  <a href="#">4to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">5to Año</a>
+                                  <a href="#">5to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">6to Año</a>
+                                  <a href="#">6to Año - IC - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
@@ -80,22 +80,22 @@
                         <div id="collapse2_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">1er Año</a>
+                                  <a href="https://zoom.us/j/905372636">1er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">2do Año</a>
+                                  <a href="#">2do Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">3er Año</a>
+                                  <a href="#">3er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">4to Año</a>
+                                  <a href="#">4to Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">5to Año</a>
+                                  <a href="#">5to Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">6to Año</a>
+                                  <a href="#">6to Año - IEM - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
@@ -112,22 +112,22 @@
                         <div id="collapse3_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">1er Año</a>
+                                  <a href="https://zoom.us/j/632512649">1er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">2do Año</a>
+                                  <a href="#">2do Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">3er Año</a>
+                                  <a href="#">3er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">4to Año</a>
+                                  <a href="#">4to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">5to Año</a>
+                                  <a href="#">5to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">6to Año</a>
+                                  <a href="#">6to Año - IEL - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
