--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                   <a href="https://zoom.us/j/894887517">1erAño - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">2do Año - IC - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/773325063">2do Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="#">3er Año - IC - UTNLaRioja</a>
@@ -83,7 +83,7 @@
                                   <a href="https://zoom.us/j/905372636">1er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">2do Año - IEM - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/129387163">2do Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="#">3er Año - IEM - UTNLaRioja</a>
@@ -115,7 +115,7 @@
                                   <a href="https://zoom.us/j/632512649">1er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">2do Año - IEL - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/549269931">2do Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="#">3er Año - IEL - UTNLaRioja</a>
