--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                   <a href="https://zoom.us/j/773325063">2do Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">3er Año - IC - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/233855238">3er Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="#">4to Año - IC - UTNLaRioja</a>
@@ -86,7 +86,7 @@
                                   <a href="https://zoom.us/j/129387163">2do Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">3er Año - IEM - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/570336977">3er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="#">4to Año - IEM - UTNLaRioja</a>
@@ -94,9 +94,6 @@
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="#">5to Año - IEM - UTNLaRioja</a>
                                   </p>
-                                <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">6to Año - IEM - UTNLaRioja</a>
-                                 </p>
                             </div>
                         </div>
                     </div>
@@ -118,7 +115,7 @@
                                   <a href="https://zoom.us/j/549269931">2do Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">3er Año - IEL - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/984756045">3er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="#">4to Año - IEL - UTNLaRioja</a>
